# Hillel_poetry_rest

./: .gitignore  README.rst  pyproject.toml  setup.cfg
src/config/: settings.py  urls.py
src/posts/: api.py  urls.py
tests/: test_hillel_poetry_rest.py
