[tool.poetry]
name = "Hillel_poetry_rest"
version = "0.1.0"
description = ""
authors = ["Mikhail Voloshin <lodestar1488@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
